test/functions/errors/unexpected_return_type.dmd
function add(a: int64, b: int64): bool
    a == b

a := 2
b := 4
result := add(a, b) : int64
print(result)

--- Output
Type mismatch

The return type of 'add' doesn't match with what I expect.

6│ result := add(a, b) : int64

The specified type is:

int64

But possible types are:

bool

---